--- a/信息披露/上市公司重大资产重组信息披露工作备忘录目录.html
+++ b/信息披露/上市公司重大资产重组信息披露工作备忘录目录.html
@@ -9,17 +9,7 @@
   <link rel="stylesheet" href="../css/Buttondown.css" type="text/css" />
 </head>
 <body>
-<h1 id="名词目录">名词目录</h1>
-<ol style="list-style-type: decimal">
-<li><a href="./一致行动人.html">一致行动人</a></li>
-<li><a href="./借壳上市.html">借壳上市</a></li>
-<li><a href="./内幕交易.html">内幕交易</a></li>
-<li><a href="./同业竞争.html">同业竞争</a></li>
-<li><a href="./董秘考试.html">董秘考试</a></li>
-<li><a href="./关联交易.html">关联交易</a></li>
-<li><a href="./发行审核基本要求.html">发行审核基本要求</a></li>
-<li><a href="./并购重组相关法律.html">并购重组相关法律</a></li>
-</ol>
+<p>上市公司重大资产重组信息披露工作备忘录 第一号 信息披露业务办理流程【2012.8修订】 上市公司重大资产重组信息披露工作备忘录 第二号 上市公司重大资产重组财务顾问业务指引（试行）【2008.5.20】 上市公司重大资产重组信息披露工作备忘录 第三号 资产评估相关信息披露【2012.08.03】 上市公司重大资产重组信息披露工作备忘录 第四号 重组内幕信息知情人名单登记及提交【2012.08.03】 上市公司重大资产重组信息披露工作备忘录 第五号 立案调查公司申请重大资产重组停牌注意事项【2012.08.03】 上市公司重大资产重组信息披露工作备忘录 第六号 上市公司现金选择权业务指引（试行）【2012.08.03】 上市公司重大资产重组信息披露工作备忘录 第七号 借壳上市的标准和条件【2012.08.03】 上市公司重大资产重组信息披露工作备忘录 第八号 上市公司重大资产重组预案公告格式指引（试行）【2012.08.03】</p>
 <div id="foot">
 
 
