--- a/尽职调查/保荐人尽职调查工作准则.html
+++ b/尽职调查/保荐人尽职调查工作准则.html
@@ -9,94 +9,6 @@
   <link rel="stylesheet" href="../css/Buttondown.css" type="text/css" />
 </head>
 <body>
-<div id="TOC">
-<ul>
-<li><a href="#ch01">第一章　总　则</a></li>
-<li><a href="#ch02">第二章　发行人基本情况调查</a><ul>
-<li><a href="#第九条改制与设立情况">第九条　改制与设立情况</a></li>
-<li><a href="#第十条历史沿革情况">第十条　历史沿革情况</a></li>
-<li><a href="#第十一条发起人股东的出资情况">第十一条　发起人、股东的出资情况</a></li>
-<li><a href="#第十二条重大股权变动情况">第十二条　重大股权变动情况</a></li>
-<li><a href="#第十三条重大重组情况">第十三条　重大重组情况</a></li>
-<li><a href="#第十四条主要股东情况">第十四条　主要股东情况</a></li>
-<li><a href="#第十五条员工情况">第十五条　员工情况</a></li>
-<li><a href="#第十六条独立情况">第十六条　独立情况</a></li>
-<li><a href="#第十七条内部职工股等情况">第十七条　内部职工股等情况</a></li>
-</ul></li>
-<li><a href="#ch03">第三章　业务与技术调查</a><ul>
-<li><a href="#第十九条行业情况及竞争状况">第十九条　行业情况及竞争状况</a></li>
-<li><a href="#第二十条采购情况">第二十条　采购情况</a></li>
-<li><a href="#第二十一条生产情况">第二十一条　生产情况</a></li>
-<li><a href="#第二十二条销售情况">第二十二条　销售情况</a></li>
-<li><a href="#第二十三条核心技术人员技术与研发情况">第二十三条　核心技术人员、技术与研发情况</a></li>
-</ul></li>
-<li><a href="#ch04">第四章　同业竞争与关联交易调查</a><ul>
-<li><a href="#第二十四条同业竞争情况">第二十四条　同业竞争情况</a></li>
-<li><a href="#第二十五条关联方及关联交易情况">第二十五条　关联方及关联交易情况</a></li>
-</ul></li>
-<li><a href="#ch05">第五章　高管人员调查</a><ul>
-<li><a href="#第二十六条高管人员任职情况及任职资格">第二十六条　高管人员任职情况及任职资格</a></li>
-<li><a href="#第二十七条高管人员的经历及行为操守">第二十七条　高管人员的经历及行为操守</a></li>
-<li><a href="#第二十八条高管人员胜任能力和勤勉尽责">第二十八条　高管人员胜任能力和勤勉尽责</a></li>
-<li><a href="#第二十九条高管人员薪酬及兼职情况">第二十九条　高管人员薪酬及兼职情况</a></li>
-<li><a href="#第三十条报告期内高管人员变动">第三十条　报告期内高管人员变动</a></li>
-<li><a href="#第三十一条高管人员是否具备上市公司高管人员的资格">第三十一条　高管人员是否具备上市公司高管人员的资格</a></li>
-<li><a href="#第三十二条高管人员持股及其它对外投资情况">第三十二条　高管人员持股及其它对外投资情况</a></li>
-</ul></li>
-<li><a href="#ch06">第六章　组织结构与内部控制调查</a><ul>
-<li><a href="#第三十三条公司章程及其规范运行情况">第三十三条　公司章程及其规范运行情况</a></li>
-<li><a href="#第三十四条组织结构和三会运作情况">第三十四条　组织结构和“三会”运作情况</a></li>
-<li><a href="#第三十五条独立董事制度及其执行情况">第三十五条　独立董事制度及其执行情况</a></li>
-<li><a href="#第三十六条内部控制环境">第三十六条　内部控制环境</a></li>
-<li><a href="#第三十七条业务控制">第三十七条　业务控制</a></li>
-<li><a href="#第三十八条信息系统控制">第三十八条　信息系统控制</a></li>
-<li><a href="#第三十九条会计管理控制">第三十九条　会计管理控制</a></li>
-<li><a href="#第四十条内部控制的监督">第四十条　内部控制的监督</a></li>
-</ul></li>
-<li><a href="#ch07">第七章　财务与会计调查</a><ul>
-<li><a href="#第四十一条财务报告及相关财务资料">第四十一条　财务报告及相关财务资料</a></li>
-<li><a href="#第四十二条会计政策和会计估计">第四十二条　会计政策和会计估计</a></li>
-<li><a href="#第四十三条评估报告">第四十三条　评估报告</a></li>
-<li><a href="#第四十四条内控鉴证报告">第四十四条　内控鉴证报告</a></li>
-<li><a href="#第四十五条财务比率分析">第四十五条　财务比率分析</a></li>
-<li><a href="#第四十六条销售收入">第四十六条　销售收入</a></li>
-<li><a href="#第四十七条销售成本与销售毛利">第四十七条　销售成本与销售毛利</a></li>
-<li><a href="#第四十八条期间费用">第四十八条　期间费用</a></li>
-<li><a href="#第四十九条非经常性损益">第四十九条　非经常性损益</a></li>
-<li><a href="#第五十条货币资金">第五十条　货币资金</a></li>
-<li><a href="#第五十一条应收款项">第五十一条　应收款项</a></li>
-<li><a href="#第五十二条存货">第五十二条　存货</a></li>
-<li><a href="#第五十三条对外投资">第五十三条　对外投资</a></li>
-<li><a href="#第五十四条固定资产无形资产">第五十四条　固定资产、无形资产</a></li>
-<li><a href="#第五十六条主要债务">第五十六条　主要债务</a></li>
-<li><a href="#第五十七条现金流量">第五十七条　现金流量</a></li>
-<li><a href="#第五十八条或有负债">第五十八条　或有负债</a></li>
-<li><a href="#第五十九条合并报表的范围">第五十九条　合并报表的范围</a></li>
-<li><a href="#第六十条纳税情况">第六十条　纳税情况</a></li>
-<li><a href="#第六十一条盈利预测">第六十一条　盈利预测</a></li>
-</ul></li>
-<li><a href="#ch08">第八章　业务发展目标调查</a><ul>
-<li><a href="#第六十二条发展战略">第六十二条　发展战略</a></li>
-<li><a href="#第六十三条经营理念和经营模式">第六十三条　经营理念和经营模式</a></li>
-<li><a href="#第六十四条历年发展计划的执行和实现情况">第六十四条　历年发展计划的执行和实现情况</a></li>
-<li><a href="#第六十五条业务发展目标">第六十五条　业务发展目标</a></li>
-<li><a href="#第六十六条募集资金投向与未来发展目标的关系">第六十六条　募集资金投向与未来发展目标的关系</a></li>
-</ul></li>
-<li><a href="#ch09">第九章　募集资金运用调查</a><ul>
-<li><a href="#第六十七条历次募集资金使用情况">第六十七条　历次募集资金使用情况</a></li>
-<li><a href="#第六十八条本次募集资金使用情况">第六十八条　本次募集资金使用情况</a></li>
-<li><a href="#第六十九条募集资金投向产生的关联交易">第六十九条　募集资金投向产生的关联交易</a></li>
-</ul></li>
-<li><a href="#ch10">第十章　风险因素及其他重要事项调查</a><ul>
-<li><a href="#第七十条风险因素">第七十条　风险因素</a></li>
-<li><a href="#第七十一条重大合同">第七十一条　重大合同</a></li>
-<li><a href="#第七十二条诉讼和担保情况">第七十二条　诉讼和担保情况</a></li>
-<li><a href="#第七十三条信息披露制度的建设和执行情况">第七十三条　信息披露制度的建设和执行情况</a></li>
-<li><a href="#第七十四条中介机构执业情况">第七十四条　中介机构执业情况</a></li>
-</ul></li>
-<li><a href="#ch11">第十一章　附　则</a></li>
-</ul>
-</div>
 <p><bt>保荐人尽职调查工作准则<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a></bt></p>
 <h1 id="ch01">第一章　总　则</h1>
 <p>　　第一条　为了规范和指导保荐人尽职调查工作，提高尽职调查工作质量，根据有关法律、行政法规及中国证券监督管理委员会（以下简称“中国证监会”）关于保荐业务管理的有关规定，制定本准则。</p>
@@ -388,6 +300,21 @@
 <ol>
 <li id="fn1"><p>来源于证监会网站<a href="http://www.csrc.gov.cn/pub/newsite/ztzl/xgfxtzgg/xgfxxxfg/201307/t20130701_230090.htm">保荐人尽职调查工作准则</a>。<a href="#fnref1">↩</a></p></li>
 </ol>
+</div>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc's MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/blog/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。但是由于编辑过程中可能出现疏漏，所以不对资料的真实性做任何保证，阅读时请仔细甄别！</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
 </div>
 </body>
 </html>
