--- a/股权变动/上市公司收购管理办法.html
+++ b/股权变动/上市公司收购管理办法.html
@@ -14,7 +14,7 @@
 <li><a href="#ch01">第一章　总则</a></li>
 <li><a href="#ch02">第二章　权益披露</a></li>
 <li><a href="#ch03">第三章　要约收购</a></li>
-<li><a href="#ch04">第四章　　协议收购</a></li>
+<li><a href="#ch04">第四章　协议收购</a></li>
 <li><a href="#ch05">第五章　间接收购</a></li>
 <li><a href="#ch06">第六章　豁免申请</a></li>
 <li><a href="#ch07">第七章　财务顾问</a></li>
@@ -29,6 +29,15 @@
                 
                                                                                     中国证券监督管理委员会主席：尚福林
                                                                                     二○○六年七月三十一日　　　　</code></pre>
+<blockquote>
+<p>【% -5%-20%非大股东或实际控制人简式权益披露；<br />- 5%-20%，大股东或实际控制人，详式披露；<br />- 20%-30%详式权益披露；20%-30%，同时是大股东或实际控制人，聘财务顾问。<br />- 30%要约收购,<del>强制要约收购义务</del>,可以部分也可以全面。<br />证券法2006修订时修订了关于强制要约的内容，详见<a href="http://www.csrc.gov.cn/pub/newsite/flb/lfzl/jnlfssyzn/yjyd/200701/t20070108_77314.htm">《中华人民共和国证券法》重大修订条款解析</a>，关于强制要约收购条款的修订。也就是说，以前的证券法要求30%的以上必须全面要约，但是30%以下可以全面也可以部分要约。但是证监会执行面的具体情况就不清楚了。%】</p>
+</blockquote>
+<blockquote>
+<p>【%另外关于收购方式，除了协议和要约，还可以有很多中，比如说<br />（1）集中竞价收购（也称公开市场买卖），即在交易所市场直接通过竞价方式购买目标公司股票；<br />（2）行政划拨，即通过国有资产管理程序将目标公司股票（主要是国有股）无偿划拨给收购人；<br />（3）大宗交易，是指达到规定的最低限额的证券单笔买卖申报，买卖双方达成一致后证券交易所确认成交的证券交易，是一种针对大单证券的特殊交易安排；<br />（4）间接收购，即不直接收购上市公司本身，而收购上市公司的控股股东；<br />（5）司法裁决；<br />（6）继承、赠与等其他民事行为；<br />（7）定向发行股份，上市公司经证监会批准后，可向特定对象定向发行股份，也可以达到收购的效果。%】</p>
+</blockquote>
+<blockquote>
+<p>【%部分要约的计算，比如说发2000万股的要约，但是有4000万股接受要约，超出了收购人拟收购的股份数量。此时，收购应按比例进行，其比例标准为2000万/4000万＝1/2，即收购人对每个股东收购一半的股份比例。%】</p>
+</blockquote>
 <h1 id="ch01">第一章　总则</h1>
 <p>　　第一条　为了规范上市公司的收购及相关股份权益变动活动，保护上市公司和投资者的合法权益，维护证券市场秩序和社会公共利益，促进证券市场资源的优化配置，根据《证券法》、《公司法》及其他相关法律、行政法规，制定本办法。</p>
 <p>　　第二条　上市公司的收购及相关股份权益变动活动，必须遵守法律、行政法规及中国证券监督管理委员会(以下简称中国证监会)的规定。当事人应当诚实守信，遵守社会公德、商业道德，自觉维护证券市场秩序，接受政府、社会公众的监督。</p>
@@ -59,9 +68,11 @@
 <h1 id="ch03">第三章　要约收购</h1>
 <p>　　第二十三条　投资者自愿选择以要约方式收购上市公司股份的，可以向被收购公司所有股东发出收购其所持有的全部股份的要约(以下简称全面要约)，也可以向被收购公司所有股东发出收购其所持有的部分股份的要约(以下简称部分要约)。</p>
 <p>　　第二十四条　通过证券交易所的证券交易，收购人持有一个上市公司的股份<em>达到该公司已发行股份的30%时，继续增持股份的，应当采取要约方式进行</em>，发出全面要约或者部分要约。</p>
+<pre><code>【%本条规定了，对于超过30%而发生的要约收购，都属于强制要约！注意，强制要约和自愿要约，强制要约必须是全面要约。这是别人解释的，反正这里有疑问，没明白。 ——必须全面！可以先收到29.9%，然后自愿发出，部分要约，收10%，哈哈，别人说的，未验证是否可行%】</code></pre>
 <p>　　第二十五条　收购人依照本办法第二十三条、第二十四条、第四十七条、第五十六条的规定，以要约方式收购一个上市公司股份的，其预定收购的股份比例均不得低于该上市公司已发行股份的5%。</p>
 <p>　　第二十六条　以要约方式进行上市公司收购的，收购人应当公平对待被收购公司的所有股东。持有同一种类股份的股东应当得到同等对待。</p>
-<p>　　第二十七条　收购人为终止上市公司的上市地位而发出全面要约的，或者向中国证监会提出申请但未取得豁免而发出全面要约的，应当以现金支付收购价款；以依法可以转让的证券(以下简称证券)支付收购价款的，应当同时提供现金方式供被收购公司股东选择。</p>
+<p>　　第二十七条　收购人为终止上市公司的上市地位而发出全面要约的，或者<em>向中国证监会提出申请但未取得豁免而发出全面要约的，应当以现金支付收购价款</em>；以依法可以转让的证券(以下简称证券)支付收购价款的，<em>应当同时提供现金方式供被收购公司股东选择</em>。</p>
+<pre><code>【%必须采用现金进行支付，可以提供证券，但是必须同时提供现金方式，也就是说，提供先进支付方式是必须的。%】</code></pre>
 <p>　　第二十八条　以要约方式收购上市公司股份的，收购人应当编制要约收购报告书，并应当聘请财务顾问向中国证监会、证券交易所提交书面报告，抄报派出机构，通知被收购公司，同时对要约收购报告书摘要作出提示性公告。<br />　　收购人依照前款规定报送符合中国证监会规定的要约收购报告书及本办法第五十条规定的相关文件之日起15日后，公告其要约收购报告书、财务顾问专业意见和律师出具的法律意见书。在15日内，中国证监会对要约收购报告书披露的内容表示无异议的，收购人可以进行公告；中国证监会发现要约收购报告书不符合法律、行政法规及相关规定的，及时告知收购人，收购人不得公告其收购要约。</p>
 <p>　　第二十九条　前条规定的要约收购报告书，应当载明下列事项：<br />　　(一)收购人的姓名、住所；收购人为法人的，其名称、注册地及法定代表人，与其控股股东、实际控制人之间的股权控制关系结构图；<br />　　(二)收购人关于收购的决定及收购目的，是否拟在未来12个月内继续增持；<br />　　(三)上市公司的名称、收购股份的种类；<br />　　(四)预定收购股份的数量和比例；<br />　　(五)收购价格；<br />　　(六)收购所需资金额、资金来源及资金保证，或者其他支付安排；<br />　　(七)收购要约约定的条件；<br />　　(八)收购期限；<br />　　(九)报送收购报告书时持有被收购公司的股份数量、比例；<br />　　(十)本次收购对上市公司的影响分析，包括收购人及其关联方所从事的业务与上市公司的业务是否存在同业竞争或者潜在的同业竞争，是否存在持续关联交易；存在同业竞争或者持续关联交易的，收购人是否已作出相应的安排，确保收购人及其关联方与上市公司之间避免同业竞争以及保持上市公司的独立性；<br />　　(十一)未来12个月内对上市公司资产、业务、人员、组织结构、公司章程等进行调整的后续计划；<br />　　(十二)前24个月内收购人及其关联方与上市公司之间的重大交易；<br />　　(十三)前6个月内通过证券交易所的证券交易买卖被收购公司股票的情况；<br />　　(十四)中国证监会要求披露的其他内容。<br />　　收购人发出全面要约的，应当在要约收购报告书中充分披露终止上市的风险、终止上市后收购行为完成的时间及仍持有上市公司股份的剩余股东出售其股票的其他后续安排；收购人发出以终止公司上市地位为目的的全面要约，无须披露前款第(十)项规定的内容。</p>
 <p>　　第三十条　收购人按照本办法第四十七条拟收购上市公司股份超过30%，须改以要约方式进行收购的，收购人应当在达成收购协议或者做出类似安排后的3日内对要约收购报告书摘要作出提示性公告，并按照本办法第二十八条、第二十九条的规定履行报告和公告义务，同时免于编制、报告和公告上市公司收购报告书；依法应当取得批准的，应当在公告中特别提示本次要约须取得相关批准方可进行。<br />　　未取得批准的，收购人应当在收到通知之日起2个工作日内，向中国证监会提交取消收购计划的报告，同时抄报派出机构，抄送证券交易所，通知被收购公司，并予公告。</p>
@@ -81,7 +92,8 @@
 <p>　　第四十四条　收购期限届满，被收购公司股权分布不符合上市条件，该上市公司的股票由证券交易所依法终止上市交易。在收购行为完成前，其余仍持有被收购公司股票的股东，有权在收购报告书规定的合理期限内向收购人以收购要约的同等条件出售其股票，收购人应当收购。</p>
 <p>　　第四十五条　收购期限届满后15日内，收购人应当向中国证监会报送关于收购情况的书面报告，同时抄报派出机构，抄送证券交易所，通知被收购公司。</p>
 <p>　　第四十六条　除要约方式外，投资者不得在证券交易所外公开求购上市公司的股份。</p>
-<h1 id="ch04">第四章　　协议收购</h1>
+<pre><code>【%设置强制要约的出发点：一是当股份公司由于股份转让导致控制权的转换时，可能会导致该公司的经营者和经营策略的改变，这对小股东是不利的。因此，应给予他们退出的机会；二是大股东所持有的股份具有对公司的控制价值，并不应只属于持有该股份的大股东，而是属于公司的全体股东，因此收购者为获得公司的控制权而付出的溢价应归公司的全体股东平均享有。%】</code></pre>
+<h1 id="ch04">第四章　协议收购</h1>
 <p>　　第四十七条　收购人通过协议方式在一个上市公司中拥有权益的股份达到或者超过该公司已发行股份的5%，但未超过30%的，按照本办法<a href="#ch02">第二章</a>的规定办理。<br />　　收购人拥有权益的股份达到该公司已发行股份的30%时，继续进行收购的，应当依法向该上市公司的股东发出全面要约或者部分要约。符合本办法<a href="#ch06">第六章</a>规定情形的，收购人可以向中国证监会申请免除发出要约。<br />　　收购人拟通过协议方式收购一个上市公司的股份超过30%的，超过30%的部分，应当改以要约方式进行；但符合本办法<a href="#ch06">第六章</a>规定情形的，收购人可以向中国证监会申请免除发出要约。收购人在取得中国证监会豁免后，履行其收购协议；未取得中国证监会豁免且拟继续履行其收购协议的，或者不申请豁免的，在履行其收购协议前，应当发出全面要约。</p>
 <p>　　第四十八条　以协议方式收购上市公司股份超过30%，收购人拟依据本办法<a href="#ch06">第六章</a>的规定申请豁免的，应当在与上市公司股东达成收购协议之日起3日内编制上市公司收购报告书，提交豁免申请及本办法第五十条规定的相关文件，委托财务顾问向中国证监会、证券交易所提交书面报告，同时抄报派出机构，通知被收购公司，并公告上市公司收购报告书摘要。派出机构收到书面报告后通报上市公司所在地省级人民政府。<br />　　收购人自取得中国证监会的豁免之日起3日内公告其收购报告书、财务顾问专业意见和律师出具的法律意见书；收购人未取得豁免的，应当自收到中国证监会的决定之日起3日内予以公告，并按照本办法第六十一条第二款的规定办理。<br />　　中国证监会发现收购报告书不符合法律、行政法规及相关规定的，应当及时告知收购人，收购人未纠正的，不得公告收购报告书，在公告前不得履行收购协议。</p>
 <p>　　第四十九条　依据前条规定所作的上市公司收购报告书，须披露本办法第二十九条第(一)项至第(六)项和第(九)项至第(十四)项规定的内容及收购协议的生效条件和付款安排。<br />　　已披露收购报告书的收购人在披露之日起6个月内，因权益变动需要再次报告、公告的，可以仅就与前次报告书不同的部分作出报告、公告；超过6个月的，应当按照本办法<a href="#ch02">第二章</a>的规定履行报告、公告义务。</p>
