--- a/关于站点/log.html
+++ b/关于站点/log.html
@@ -9,12 +9,8 @@
   <link rel="stylesheet" href="../css/Buttondown.css" type="text/css" />
 </head>
 <body>
-<div id="TOC">
-<ul>
-<li><a href="#日志系统">日志系统</a></li>
-</ul>
-</div>
 <h1 id="日志系统">日志系统</h1>
+<p>【2014.05.03】 1. 从网上看到《证券发行上市审核工作手册》，计划对目录进行重构。</p>
 <p>【2014.04.27】</p>
 <ol style="list-style-type: decimal">
 <li>增加了《上海证券交易所股票上市规则》的文字版本，深交所的仍然是pdf。初步看了一遍，真累，太长了。</li>
@@ -62,5 +58,20 @@
 <li>尝试了doukuwiki，编辑太耗时间，放弃。</li>
 <li>尝试了markdown语句，可以用快盘同步，编辑方便，选择了该工具。markdown超赞！</li>
 </ol>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc's MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/blog/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。但是由于编辑过程中可能出现疏漏，所以不对资料的真实性做任何保证，阅读时请仔细甄别！</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
